--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>morpion</h1>
-    <p>player 1 green  ///    player 2 red</p>
-    <div id="playerToPlay">partie to begin with player 1 </div>
+    <p id="legend"></p>
+    <div id="playerToPlay"></div>
     <div id="playground"></div>
     <button id="restart">restart</button>
     <script src="../script/script.js"></script>
